feat: modern auth, command palette, and hunter map

--- a/pipelane-front/src/assets/i18n/en.json
+++ b/pipelane-front/src/assets/i18n/en.json
@@ -5,5 +5,52 @@
   "nav.campaigns": "Campaigns",
   "nav.analytics": "Analytics",
   "nav.settings": "Settings",
-  "policy.wa.text_blocked": "WhatsApp text disabled outside 24h window"
+  "policy.wa.text_blocked": "WhatsApp text disabled outside 24h window",
+  "language.switch": "Select language",
+  "language.en": "EN",
+  "language.fr": "FR",
+  "language.label.en": "English",
+  "language.label.fr": "French",
+  "common.or": "or",
+  "common.close": "Close",
+  "login.brand.tagline": "Own every conversation.",
+  "login.title": "Sign in",
+  "login.subtitle": "Sign in to orchestrate your multichannel campaigns.",
+  "login.email": "Work email",
+  "login.password": "Password",
+  "login.showPassword": "Show password",
+  "login.hidePassword": "Hide password",
+  "login.remember": "Remember me",
+  "login.forgot": "Forgot password?",
+  "login.submit": "Sign in",
+  "login.noAccount": "Don't have an account?",
+  "login.createAccount": "Create an account",
+  "login.sso.google": "Continue with Google",
+  "login.sso.microsoft": "Continue with Microsoft",
+  "login.hero.title": "Real-time insights",
+  "login.hero.copy": "Track key indicators, automate follow-ups, and focus on the conversations that matter.",
+  "errors.invalidCredentials": "Invalid credentials.",
+  "errors.invalidCredentials.detail": "Check your email and password, then try again.",
+  "errors.serviceUnavailable": "Service unavailable.",
+  "errors.serviceUnavailable.detail": "Please try again in a moment.",
+  "errors.emailRequired": "Email is required.",
+  "errors.emailInvalid": "Enter a valid email.",
+  "errors.passwordRequired": "Password is required.",
+  "search.placeholder": "Search prospects, conversations, campaigns…",
+  "search.inputLabel": "Search across prospects, conversations, and campaigns",
+  "search.recent": "Recent searches",
+  "search.clearHistory": "Clear history",
+  "search.noRecent": "Type a query to add it to your history.",
+  "search.noResults": "No results for",
+  "search.filters.ariaLabel": "Filter search results",
+  "search.filters.all": "All",
+  "search.filters.prospects": "Prospects",
+  "search.filters.conversations": "Conversations",
+  "search.filters.campaigns": "Campaigns",
+  "search.filters.lists": "Lists",
+  "search.groups.prospects": "Prospects",
+  "search.groups.conversations": "Conversations",
+  "search.groups.campaigns": "Campaigns",
+  "search.groups.lists": "Lists",
+  "search.groups.default": "Results"
 }
