--- a/pipelane-front/src/assets/i18n/fr.json
+++ b/pipelane-front/src/assets/i18n/fr.json
@@ -5,5 +5,52 @@
   "nav.campaigns": "Campagnes",
   "nav.analytics": "Analytique",
   "nav.settings": "Paramètres",
-  "policy.wa.text_blocked": "Texte WhatsApp désactivé hors fenêtre 24h"
+  "policy.wa.text_blocked": "Texte WhatsApp désactivé hors fenêtre 24h",
+  "language.switch": "Changer de langue",
+  "language.en": "EN",
+  "language.fr": "FR",
+  "language.label.en": "Anglais",
+  "language.label.fr": "Français",
+  "common.or": "ou",
+  "common.close": "Fermer",
+  "login.brand.tagline": "Reprenez le contrôle de vos conversations.",
+  "login.title": "Connexion",
+  "login.subtitle": "Connectez-vous pour piloter vos campagnes multicanales.",
+  "login.email": "Email professionnel",
+  "login.password": "Mot de passe",
+  "login.showPassword": "Afficher le mot de passe",
+  "login.hidePassword": "Masquer le mot de passe",
+  "login.remember": "Se souvenir de moi",
+  "login.forgot": "Mot de passe oublié ?",
+  "login.submit": "Se connecter",
+  "login.noAccount": "Pas de compte ?",
+  "login.createAccount": "Créer un compte",
+  "login.sso.google": "Continuer avec Google",
+  "login.sso.microsoft": "Continuer avec Microsoft",
+  "login.hero.title": "Insights en temps réel",
+  "login.hero.copy": "Visualisez vos indicateurs clés, automatisez les relances et concentrez-vous sur les conversations qui comptent.",
+  "errors.invalidCredentials": "Identifiants invalides.",
+  "errors.invalidCredentials.detail": "Vérifiez votre email et votre mot de passe avant de réessayer.",
+  "errors.serviceUnavailable": "Service indisponible.",
+  "errors.serviceUnavailable.detail": "Réessayez dans quelques instants.",
+  "errors.emailRequired": "L'email est requis.",
+  "errors.emailInvalid": "Saisissez un email valide.",
+  "errors.passwordRequired": "Le mot de passe est requis.",
+  "search.placeholder": "Rechercher (prospects, conversations, campagnes…)",
+  "search.inputLabel": "Rechercher dans les prospects, conversations et campagnes",
+  "search.recent": "Recherches récentes",
+  "search.clearHistory": "Effacer l'historique",
+  "search.noRecent": "Tapez une requête pour l'ajouter à votre historique.",
+  "search.noResults": "Aucun résultat pour",
+  "search.filters.ariaLabel": "Filtrer les résultats de recherche",
+  "search.filters.all": "Tous",
+  "search.filters.prospects": "Prospects",
+  "search.filters.conversations": "Conversations",
+  "search.filters.campaigns": "Campagnes",
+  "search.filters.lists": "Listes",
+  "search.groups.prospects": "Prospects",
+  "search.groups.conversations": "Conversations",
+  "search.groups.campaigns": "Campagnes",
+  "search.groups.lists": "Listes",
+  "search.groups.default": "Résultats"
 }
